--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
 						</h2>
 					</div>
 					<div class="Header-actions">
-						<a href="/">Home</a>
-						<a href="/cv">CV</a>
-						<a href="/blog">Blog</a>
+						<a href="/" class="anchor-main">Home</a>
+						<a href="/about" class="anchor-main">About</a>
+						<a href="/cv" class="anchor-main">CV</a>
 					</div>
 				</div>
 			</header>
@@ -51,8 +51,8 @@
 			<footer class="Site-footer">
 				<div class="Footer">
 					<div class="Footer-credit">
-						<a href="mailto:kiranraj.anugula@gmail.com">email</a>
-						<a href="https://github.com/codingcooker">github.com/codingcooker</a>
+						<a href="mailto:kiranraj.anugula@gmail.com" class="anchor-main">email</a>
+						<a href="https://github.com/codingcooker" class="anchor-main">github.com/codingcooker</a>
 					</div>					
 				</div>
 			</footer>
