--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,6 @@
+@import "./variables";
 @import "./base";
-@import "./site";
 @import "./header";
-@import "./home";
+@import "./site";
+//@import "./home";
+@import "./post";
