--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,33 +2,37 @@
 layout: default
 comments: true
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta post-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ page.date | date_to_string }}</p>
-<!--<span class="post-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ page.date | date_to_string }}</span>-->
-<div class="post">
-  {{ content }}
-</div>
 
-{% if page.comments %}
-<div id="disqus_thread"></div>
-<script>
+<article>
+  <header>
+    <h1>{{ page.title }}</h1>
+    <p class="meta post-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ page.date | date_to_string }}</p>    
+  </header>
+  <section class="post">
+    {{ content }}
+  </section>
+  {% if page.comments %}
+  <div id="disqus_thread"></div>
+  <script>
 
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = '//codingcooker.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  /**
+  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+  var disqus_config = function () {
+  this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  */
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = '//codingcooker.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-{% endif %}
+  {% endif %}
+</article>
+
