--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -8,97 +8,28 @@
 
 html {
   height: 100%;
-  color: hsl(0,0%,25%);
-  font: 400 1em/1.4 'Raleway', 'Open Sans', sans-serif;
+}
+
+body {
+  color: $body-color;
+  font-family: $body-font;
   text-rendering: optimizeLegibility;
-}
-
-@media (-webkit-min-device-pixel-ratio: 1.5),
-    (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
-  html {
-    font-weight: 300;
-  }
-}
-
-h1 {
-  font-weight: 300;
-  font-size: 2em;
-  -webkit-font-kerning: normal;
-  letter-spacing: -.015em;
-  line-height: 1;
-  margin: .25em 0 .75em;
-}
-
-@media (min-width: 768px) {
-  h1 {
-    font-size: 2.5em;
-    margin: .5em 0 1em;
-  }
-}
-
-h2 {
-  font-size: 1.333em;
-  font-weight: 600;
-  margin: 0 0 calc(1.5em/1.333);
-}
-
-h3 {
-  font-size: 1em;
-  font-weight: 600;
-  margin: 0 0 1.5em;
-}
-
-p,
-pre {
-  margin: 0 0 1.5em;
-}
-
-code,
-pre {
-  font-family: 'Menlo', 'Monaco', monospace;
-}
-
-code {
-  font-size: .9em;
+  font-size: 18px;
+  line-height: 1.45;
   font-weight: normal;
-  color: #000;
 }
 
-pre > code {
-  font: inherit;
-  color: inherit;
+@media only screen and (max-width: 45em){
+  body {
+    font-size: 16px;
+  }
 }
 
-a {
-  color: #428bca;
+h1,h2,h3,h4,h5,h6{
+  font-family: $heading-font;
+  color: $heading-color;
 }
 
-.anchor-main {
-  //border-bottom: 1px dashed hsla(150, 45%, 50%, 0.5);
-  color: rgb(60,65,70);
-  text-decoration: none;
-}
-.anchor-main:focus,
-.anchor-main:hover {
-  border-bottom: 2px solid rgb(85,174,46);
-}
-
-ol,
-ul {
-  list-style: square;
-  margin: 0 0 1.5em;
-  padding: 0 0 0 1.5em;
-}
-
-li {
-  margin-bottom: 0.333em;
-}
-
-
-figure {
-  margin: 0;
-}
-
-strong {
-  font-weight: 600;
+footer {
+  text-align: center;
 }
