--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,120 +1,34 @@
-.Header {
-  padding: 1.5em;
-  background-color: rgba(147, 128, 108, 0.1);
-  text-align: center;
-}
-@media (min-width: 768px) {
-  .Header {
-    padding: 3em 1.5em;
-  }
-}
-
-.Header-title {
-  margin: 0 0 0.15em;
-  font-size: 1.8em;
-  font-weight: 600;
-  line-height: 1;
-  word-spacing: 0.08em;
-}
-.Header-title i {
-  font-family: serif;
-  font-style: italic;
-  font-weight: 400;
-}
-.Header-title a {
-  border: 0;
-  color: inherit;
-  font-weight: inherit;
-}
-.Header-title a:focus, .Header-title a:hover, .Header-title a:active {
-  text-decoration: none;
-}
-@media (min-width: 768px) {
-  .Header-title {
-    font-size: 4em;
-  }
-}
-
-.Header-subTitle {
-  margin: 0 0 1.5em;
-  font-size: 0.8em;
-  font-weight: 300;
-  white-space: nowrap;
-}
-@media (min-width: 768px) {
-  .Header-subTitle {
-    margin: 1em 0 1.75em;
-    font-size: 1.1em;
-  }
-}
-
-.Header-actions {
+nav {
   display: flex;
-  align-items: stretch;
-  flex-direction: column;
-  font-size: 0.9em;
+  align-items: center;
+  justify-content: space-between;
 
-  a {
-      margin: 10px;
-  }
-}
-@media (min-width: 384px) {
-  .Header-actions {
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-  }
-}
-@media (min-width: 768px) {
-  .Header-actions {
-    font-size: 1.1em;
-  }
-}
+  .nav-titles {
+      display: flex;
+      align-items: center;
 
-.Header-button:first-child {
-  margin: 0 0 1em;
-}
-@media (min-width: 384px) {
-  .Header-button:first-child {
-    margin: 0 1em 0 0;
+      .nav-title {
+          font-size: 2.5em;
+          margin: 0;
+          text-align: center;
+          line-height: 1.1em;
+      }
+
+      .nav-subtitle {
+          font-size: 0.8em;
+          font-weight: normal;
+          text-align: center;
+          margin-top: 0.5em;
+      }
   }
 }
 
-@media (min-width: 768px) {
-  .Header--cozy {
-    display: flex;
-    padding: 1.5em;
-    align-items: center;
-  }
-  .Header--cozy .Header-titles {
-    display: flex;
-    align-items: center;
-  }
-  .Header--cozy .Header-title {
-    font-size: 1.5em;
-  }
-  .Header--cozy .Header-subTitle {
-    margin: 0 0 0 1em;
-    font-size: 0.8em;
-    font-weight: 300;
-    color: gray;
-  }
-  .Header--cozy .Header-actions {
-    flex: 1;
-    justify-content: flex-end;
-    font-size: 0.9em;
-  }
-}
+@media only screen and (max-width: 45em){
+    nav {
+        flex-direction: column;
 
-.Footer {
-  padding: 1.5rem 1.5rem;
-  color: #fff;
-  font-size: 0.85em;
-  text-align: center;
-}
-
-.Footer a {
-  padding-bottom: 1px;
-  color: #fff;
-  margin: 10px;
+        .nav-actions {
+            margin-top: 1em;
+        }
+    }
 }
