Some more styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 						</div>
 						<div class="nav-site-name">
 							<h1 class="nav-title">
-								Coding Cooker
+								<a href="/"><span class="bg">C</span>oding <span class="bg">C</span>ooker</a>
 							</h1>
 							<h2 class="nav-subtitle">
 								Recipe's for modern web development
