--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,6 +55,16 @@ nav {
       margin: 0;
       text-align: center;
       line-height: 1.1em; }
+      nav .nav-titles .nav-title a {
+        text-decoration: none;
+        color: inherit; }
+      nav .nav-titles .nav-title .bg {
+        display: inline-block;
+        -webkit-transform: rotate(-10deg);
+            -ms-transform: rotate(-10deg);
+                transform: rotate(-10deg);
+        color: #fc593f;
+        text-shadow: 3px 3px 2px #000; }
     nav .nav-titles .nav-subtitle {
       font-size: 0.8em;
       font-weight: normal;
