--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,174 +1,1 @@
-*,
-*::after,
-*::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
-html {
-  height: 100%; }
-
-body {
-  color: #333;
-  font-family: "Gentium Book Basic", serif;
-  text-rendering: optimizeLegibility;
-  font-size: 18px;
-  line-height: 1.45;
-  font-weight: normal; }
-
-@media only screen and (max-width: 45em) {
-  body {
-    font-size: 16px; } }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  color: #4b4236; }
-
-footer {
-  text-align: center; }
-
-nav {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
-  nav .nav-titles {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    nav .nav-titles .nav-title {
-      font-size: 2.5em;
-      margin: 0;
-      text-align: center;
-      line-height: 1.1em; }
-      nav .nav-titles .nav-title a {
-        text-decoration: none;
-        color: inherit; }
-      nav .nav-titles .nav-title .bg {
-        display: inline-block;
-        -webkit-transform: rotate(-10deg);
-            -ms-transform: rotate(-10deg);
-                transform: rotate(-10deg);
-        color: #fc593f;
-        text-shadow: 3px 3px 2px #000; }
-    nav .nav-titles .nav-subtitle {
-      font-size: 0.8em;
-      font-weight: normal;
-      text-align: center;
-      margin-top: 0.5em; }
-
-@media only screen and (max-width: 45em) {
-  nav {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; }
-    nav .nav-actions {
-      margin-top: 1em; } }
-
-:root {
-  --space: 1.5em;
-  --space-lg: 2em;
-  --bg-color: #46b980; }
-
-.logo img {
-  width: 100px;
-  height: auto; }
-
-.Site {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 100%;
-  /* 1, 3 */ }
-
-.Site-header,
-.Site-footer {
-  -webkit-box-flex: 0;
-  -webkit-flex: none;
-      -ms-flex: none;
-          flex: none;
-  /* 2 */
-  padding: 1em; }
-
-.Site-header {
-  background: -webkit-gradient(linear, left top, right top, color-stop(10%, #dee1e1), color-stop(90%, #f4f4f4));
-  background: -webkit-linear-gradient(left, #dee1e1 10%, #f4f4f4 90%);
-  background: linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
-
-.Site-footer {
-  background: -webkit-gradient(linear, left top, right top, color-stop(10%, #dee1e1), color-stop(90%, #f4f4f4));
-  background: -webkit-linear-gradient(left, #dee1e1 10%, #f4f4f4 90%);
-  background: linear-gradient(90deg, #dee1e1 10%, #f4f4f4 90%); }
-
-.Site-content {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-  /* 2 */
-  padding: var(--space) var(--space) 0;
-  max-width: 35em;
-  margin: auto; }
-
-.anchor-main {
-  text-decoration: none;
-  color: inherit;
-  padding: 0.5em;
-  margin: 0.5em;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  font-size: 0.9em; }
-  .anchor-main:hover, .anchor-main:active {
-    border-bottom: 0.2em solid #fc593f; }
-
-.posts article {
-  border: 1px solid transparent;
-  border-color: #ddd;
-  list-style: none;
-  -webkit-border-radius: 2px;
-          border-radius: 2px;
-  padding: 0.5em;
-  margin-bottom: 0.5em; }
-
-.post {
-  margin: 0.5em 0; }
-
-.post-date {
-  color: #777;
-  display: block;
-  font-size: 0.9em; }
-
-.post-title,
-.post-excerpt,
-.readmore {
-  margin-bottom: 1em; }
-
-.post-title a {
-  text-decoration: none;
-  color: inherit; }
-
-.readmore a {
-  color: #fc593f; }
+*,::after,::before{-webkit-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0}html{height:100%}body{color:#333;font-family:"Gentium Book Basic",serif;text-rendering:optimizeLegibility;font-size:18px;line-height:1.45;font-weight:400}.anchor-main,h1,h2,h3,h4,h5,h6{font-family:"Open Sans",Helvetica,Arial,sans-serif}@media only screen and (max-width:45em){body{font-size:16px}}h1,h2,h3,h4,h5,h6{color:#4b4236}footer{text-align:center}nav{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between}nav .nav-titles{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}nav .nav-titles .nav-title{font-size:2.5em;margin:0;text-align:center;line-height:1.1em}nav .nav-titles .nav-title a{text-decoration:none;color:inherit}nav .nav-titles .nav-title .bg{display:inline-block;-webkit-transform:rotate(-10deg);-ms-transform:rotate(-10deg);transform:rotate(-10deg);color:#fc593f;text-shadow:3px 3px 2px #000}nav .nav-titles .nav-subtitle{font-size:.8em;font-weight:400;text-align:center;margin-top:.5em}@media only screen and (max-width:45em){nav{-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column}nav .nav-actions{margin-top:1em}.logo{margin-right:1em}}:root{--space:1.5em;--space-lg:2em;--bg-color:#46b980}.logo img{width:100px;height:auto}.Site{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;height:100%}.Site-footer,.Site-header{-webkit-box-flex:0;-webkit-flex:none;-ms-flex:none;flex:none;padding:1em;background:-webkit-gradient(linear,left top,right top,color-stop(10%,#dee1e1),color-stop(90%,#f4f4f4));background:-webkit-linear-gradient(left,#dee1e1 10%,#f4f4f4 90%);background:linear-gradient(90deg,#dee1e1 10%,#f4f4f4 90%)}.Site-content{-webkit-box-flex:1;-webkit-flex:1 0 auto;-ms-flex:1 0 auto;flex:1 0 auto;padding:var(--space) var(--space) 0;max-width:35em;margin:auto}.anchor-main{text-decoration:none;color:inherit;padding:.5em;margin:.5em;font-weight:400;font-size:.9em}.anchor-main:active,.anchor-main:hover{border-bottom:.2em solid #fc593f}.posts article{border:1px solid #ddd;list-style:none;-webkit-border-radius:2px;border-radius:2px;padding:.5em;margin-bottom:.5em}.post{margin:.5em 0}.post-date{color:#777;display:block;font-size:.9em}.post-excerpt,.post-title,.readmore{margin-bottom:1em}.post-title a{text-decoration:none;color:inherit}.readmore a{color:#fc593f}
