--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -12,6 +12,7 @@ nav {
           margin: 0;
           text-align: center;
           line-height: 1.1em;
+          font-weight: 600;
 
           a {
               text-decoration: none;
