--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -29,11 +29,31 @@
   a {
     text-decoration: none;
     color: inherit;
-    //font-size: 1.5em;
+    transition: hover ease 0.5s;
+    display: inline-block;
+
+    &:after {
+      content: '';
+      display: block;
+      border-bottom: 0.1em solid $heading-color;
+      transform: scaleX(0);
+      transition: transform 250ms ease-in-out;
+      transform-origin: 0% 50%;
+    }
+
+    &:hover:after {
+      transform: scaleX(1);
+    }
   }
 }
 .readmore{
   a {
     color: $primary-color;
+    text-decoration: none;
   }
+}
+
+.article-excerpt:hover,
+.article-excerpt:active {
+  background: $main-gradient;//#fcfcfc
 }
