--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,9 @@
     <nav role="banner">
         <div class="nav-titles">
             <div class="logo">
-                <img src="/assets/img/logo.png" alt="CodingCooker">
+                <img src="/assets/img/logo-1.png" alt="Logo">
             </div>
             <div class="nav-site-name">
-                <h1 class="nav-title">
-                    <a href="/"><span class="bg">C</span>oding <span class="bg">C</span>ooker</a>
-                </h1>
                 <h2 class="nav-subtitle">
                     Recipe's for modern web development
                 </h2>							
