--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <nav role="banner">
         <div class="nav-titles">
             <div class="logo">
-                <img src="/assets/img/logo-1.png" alt="Logo">
+                <a href="/"><img src="/assets/img/logos/logo2-plain.png" alt="Logo"></a>
             </div>
             <div class="nav-site-name">
                 <h2 class="nav-subtitle">
