--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -5,7 +5,7 @@
 }
 
 .logo img{
-    width: 150px;
+    width: 180px;
     height: auto;
     margin-right: 1em;
 }
@@ -56,6 +56,6 @@
 
     &:hover,
     &:active {
-        border-bottom: 0.2em solid $primary-color;
+        border-bottom: 0.2em solid $hover-color;
     }
 }
