--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,5 @@
 $primary-color: #fc593f;
+$hover-color: #e37766;
 
 $body-font: 'Gentium Book Basic', serif;
 $heading-font: 'Open Sans', Helvetica, Arial, sans-serif;
