--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,7 +1,9 @@
 $primary-color: #fc593f;
-$hover-color: #e37766;
+//$hover-color: #e37766;
+$hover-color: #4b4236;
 
-$body-font: 'Gentium Book Basic', serif;
+//$body-font: 'Gentium Book Basic', serif;
+$body-font: 'Source Sans Pro', sans-serif;
 $heading-font: 'Open Sans', Helvetica, Arial, sans-serif;
 
 //$body-color: hsl(0,0%,25%);
