--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     <!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/dist/css/normalize.css">
@@ -20,5 +21,5 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
     <!-- Favicon –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="codingcooker.png">
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
 </head>
