--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -61,6 +61,6 @@
 .button {
   //border: 1px solid red;
   padding: 0.2em;
-  background-color: #fbe404;
+  background-color: #fcec4f;
   border-radius: 0.2em;
 }
