--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -32,6 +32,35 @@
                 display: inline-block;
                 margin: 0.5em;
                 font-size: 1.5em;
+                a {
+                    color: inherit;
+                    .fa-linkedin,
+                    .fa-twitter,
+                    .fa-github,
+                    .fa-stack-overflow,
+                    .fa-envelope {
+                        transition: all .2s ease-in-out;
+
+                        &:hover {
+                            transform: scale(1.3);
+                        }
+                    }
+                    .fa-linkedin:hover {
+                        color: #007bb5;
+                    }
+                    .fa-twitter:hover{
+                        color: #55acee;
+                    }
+                    .fa-github:hover{
+                        color: black;
+                    }
+                    .fa-stack-overflow:hover{
+                        color: #ED780E;
+                    }
+                    .fa-envelope:hover{
+                        color: #fcec4f;
+                    }
+                }
             }
         }
     }
