--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,16 @@
     <!-- FONT
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     <!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" href="/assets/dist/css/normalize.css">
-    <!--<link rel="stylesheet" href="/assets/css/flexboxgrid.min.css" type="text/css" >-->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+    {% if page.custom_css %}
+        {% for stylesheet in page.custom_css %}
+        <link rel="stylesheet" href="{{ stylesheet }}">
+        {% endfor %}
+    {% endif %}
 
     <!-- Favicon –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="icon" type="image/png" href="/assets/img/favicon.png">
