--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,10 @@
 		</main>
 		{% include footer.html %}
 		<script src="https://use.fontawesome.com/d7a7b893fb.js"></script>
+		{% if page.custom_js %}
+        	{% for jsfile in page.custom_js %}
+        	<script src="{{ jsfile }}"></script>
+        	{% endfor %}
+    	{% endif %}
 	</body>
 </html>
