--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
     <!-- Basic Page Needs  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="google-site-verification" content="QYQEFxtTLyMb1OfY5QnMHpZgUU9q5xGJD9lKH-Hw6Ps" />
     <title>{{ page.title }}</title>
     <meta name="description" content="">
     <meta name="author" content="Kiran Raj">
